--- a/src/interpreter/Makefile-depend
+++ b/src/interpreter/Makefile-depend
@@ -1,10 +1,95 @@
-$(OBJ)/group.o : group.cc \
-	$(INCLUDE)/xml_utils.h $(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/comm.h $(INCLUDE)/security.h $(INCLUDE)/tokenizer.h $(INCLUDE)/screen.h $(INCLUDE)/player_table.h 
-	$(CXX) -c $(CXXFLAGS) group.cc             -o $(OBJ)/group.o
-$(OBJ)/interpreter.o : interpreter.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/help.h $(INCLUDE)/char_class.h $(INCLUDE)/clan.h $(INCLUDE)/vehicle.h $(INCLUDE)/house.h $(INCLUDE)/login.h $(INCLUDE)/matrix.h $(INCLUDE)/bomb.h $(INCLUDE)/security.h $(INCLUDE)/prog.h 
-	$(CXX) -c $(CXXFLAGS) interpreter.cc       -o $(OBJ)/interpreter.o
-$(OBJ)/security.o : security.cc \
-	$(INCLUDE)/xml_utils.h $(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/comm.h $(INCLUDE)/tokenizer.h $(INCLUDE)/screen.h $(INCLUDE)/security.h $(INCLUDE)/boards.h $(INCLUDE)/player_table.h 
-	$(CXX) -c $(CXXFLAGS) security.cc          -o $(OBJ)/security.o
+$(OBJ)/group.o: group.cc /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/xml_utils.h \
+  ../include/tmpstr.h ../include/structs.h ../include/defs.h \
+  ../include/macros.h ../include/constants.h ../include/obj_data.h \
+  ../include/creature_list.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/account.h ../include/desc_data.h ../include/editor.h \
+  ../include/interpreter.h ../include/room_data.h ../include/search.h \
+  ../include/weather.h ../include/zone_data.h ../include/ban.h \
+  ../include/utils.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/security.h ../include/screen.h ../include/tokenizer.h \
+  ../include/player_table.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/interpreter.o: interpreter.cc ../include/structs.h ../include/defs.h \
+  ../include/macros.h ../include/constants.h ../include/obj_data.h \
+  ../include/xml_utils.h /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
+  ../include/creature_list.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/account.h ../include/desc_data.h ../include/editor.h \
+  ../include/interpreter.h ../include/room_data.h ../include/search.h \
+  ../include/weather.h ../include/zone_data.h ../include/ban.h \
+  ../include/comm.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/spells.h ../include/handler.h ../include/mail.h \
+  ../include/screen.h ../include/help.h ../include/char_class.h \
+  ../include/actions.h ../include/mobact.h ../include/clan.h \
+  ../include/vehicle.h ../include/house.h ../include/login.h \
+  ../include/matrix.h ../include/bomb.h ../include/security.h \
+  ../include/prog.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
+$(OBJ)/security.o: security.cc /usr/include/libxml2/libxml/parser.h \
+  /usr/include/libxml2/libxml/xmlversion.h \
+  /usr/include/libxml2/libxml/xmlexports.h \
+  /usr/include/libxml2/libxml/tree.h \
+  /usr/include/libxml2/libxml/xmlstring.h \
+  /usr/include/libxml2/libxml/xmlregexp.h \
+  /usr/include/libxml2/libxml/dict.h /usr/include/libxml2/libxml/hash.h \
+  /usr/include/libxml2/libxml/valid.h \
+  /usr/include/libxml2/libxml/xmlerror.h \
+  /usr/include/libxml2/libxml/list.h \
+  /usr/include/libxml2/libxml/xmlautomata.h \
+  /usr/include/libxml2/libxml/entities.h \
+  /usr/include/libxml2/libxml/encoding.h \
+  /usr/include/libxml2/libxml/xmlIO.h \
+  /usr/include/libxml2/libxml/globals.h /usr/include/libxml2/libxml/SAX.h \
+  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
+  /usr/include/libxml2/libxml/xmlmemory.h \
+  /usr/include/libxml2/libxml/threads.h ../include/xml_utils.h \
+  ../include/tmpstr.h ../include/structs.h ../include/defs.h \
+  ../include/macros.h ../include/constants.h ../include/obj_data.h \
+  ../include/creature_list.h ../include/creature.h \
+  ../include/combat_data_list.h ../include/safe_list.h \
+  ../include/account.h ../include/desc_data.h ../include/editor.h \
+  ../include/interpreter.h ../include/room_data.h ../include/search.h \
+  ../include/weather.h ../include/zone_data.h ../include/ban.h \
+  ../include/utils.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
+  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/tokenizer.h ../include/screen.h ../include/security.h \
+  ../include/boards.h ../include/player_table.h
+	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/group.o $(OBJ)/interpreter.o $(OBJ)/security.o
