--- a/src/db/Makefile-depend
+++ b/src/db/Makefile-depend
@@ -26,8 +26,7 @@ $(OBJ)/account.o: account.cc ../include/utils.h ../include/structs.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/player_table.h ../include/comm.h ../include/security.h \
   ../include/screen.h ../include/clan.h ../include/handler.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h
+  ../include/db.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/analysis.o: analysis.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -56,9 +55,8 @@ $(OBJ)/analysis.o: analysis.cc ../include/structs.h ../include/defs.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/screen.h \
   ../include/tokenizer.h ../include/obj_matcher.h ../include/handler.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
-  ../include/olc.h ../include/object_map.h
+  ../include/db.h ../include/spells.h ../include/olc.h \
+  ../include/object_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/constants.o: constants.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -112,8 +110,7 @@ $(OBJ)/db.o: db.cc ../include/structs.h ../include/defs.h ../include/macros.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/utils.h ../include/db.h ../include/comm.h \
   ../include/handler.h ../include/spells.h ../include/mail.h \
   ../include/house.h ../include/screen.h ../include/flow_room.h \
   ../include/clan.h ../include/paths.h ../include/quest.h \
@@ -150,9 +147,8 @@ $(OBJ)/obj_matcher.o: obj_matcher.cc ../include/structs.h ../include/defs.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/specs.h ../include/comm.h ../include/materials.h \
   ../include/obj_matcher.h ../include/utils.h ../include/handler.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/spells.h \
-  ../include/olc.h ../include/tokenizer.h ../include/screen.h
+  ../include/db.h ../include/spells.h ../include/olc.h \
+  ../include/tokenizer.h ../include/screen.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/objsave.o: objsave.cc ../include/structs.h ../include/defs.h \
   ../include/macros.h ../include/constants.h ../include/obj_data.h \
@@ -180,10 +176,8 @@ $(OBJ)/objsave.o: objsave.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
-  ../include/spells.h ../include/screen.h ../include/vehicle.h \
-  ../include/house.h ../include/bomb.h
+  ../include/utils.h ../include/spells.h ../include/screen.h \
+  ../include/vehicle.h ../include/house.h ../include/bomb.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/xml.o: xml.cc ../include/constants.h ../include/utils.h \
   ../include/structs.h ../include/defs.h ../include/macros.h \
@@ -211,8 +205,7 @@ $(OBJ)/xml.o: xml.cc ../include/constants.h ../include/utils.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/vendor.h \
-  ../include/comm.h ../include/mobile_map.h ../include/object_map.h
+  ../include/db.h ../include/vendor.h ../include/comm.h \
+  ../include/mobile_map.h ../include/object_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/account.o $(OBJ)/analysis.o $(OBJ)/constants.o $(OBJ)/db.o $(OBJ)/obj_matcher.o $(OBJ)/objsave.o $(OBJ)/xml.o
