--- a/src/help/Makefile-depend
+++ b/src/help/Makefile-depend
@@ -24,9 +24,7 @@ $(OBJ)/help_collection.o: help_collection.cc ../include/structs.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/help.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/utils.h ../include/help.h ../include/db.h ../include/comm.h \
   ../include/screen.h ../include/handler.h ../include/security.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 $(OBJ)/help_item.o: help_item.cc ../include/structs.h ../include/defs.h \
@@ -54,9 +52,7 @@ $(OBJ)/help_item.o: help_item.cc ../include/structs.h ../include/defs.h \
   ../include/account.h ../include/desc_data.h ../include/editor.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/utils.h ../include/help.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/comm.h \
+  ../include/utils.h ../include/help.h ../include/db.h ../include/comm.h \
   ../include/screen.h ../include/handler.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/help_collection.o $(OBJ)/help_item.o
