--- a/src/editor/Makefile-depend
+++ b/src/editor/Makefile-depend
@@ -23,9 +23,7 @@ $(OBJ)/editor.o: editor.cc ../include/screen.h ../include/desc_data.h \
   /usr/include/libxml2/libxml/threads.h ../include/tmpstr.h \
   ../include/creature_list.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
-  ../include/account.h ../include/interpreter.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/utils.h \
+  ../include/account.h ../include/interpreter.h ../include/utils.h \
   ../include/login.h ../include/boards.h ../include/mail.h \
   ../include/player_table.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
