--- a/src/house/Makefile-depend
+++ b/src/house/Makefile-depend
@@ -24,10 +24,8 @@ $(OBJ)/house.o: house.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/comm.h ../include/handler.h ../include/db.h \
-  /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/security.h \
-  ../include/screen.h ../include/player_table.h ../include/utils.h \
-  ../include/house.h ../include/tokenizer.h ../include/accstr.h \
-  ../include/clan.h ../include/object_map.h
+  ../include/security.h ../include/screen.h ../include/player_table.h \
+  ../include/utils.h ../include/house.h ../include/tokenizer.h \
+  ../include/accstr.h ../include/clan.h ../include/object_map.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/house.o
