--- a/src/weather/Makefile-depend
+++ b/src/weather/Makefile-depend
@@ -24,7 +24,6 @@ $(OBJ)/weather.o: weather.cc ../include/structs.h ../include/defs.h \
   ../include/interpreter.h ../include/room_data.h ../include/search.h \
   ../include/weather.h ../include/zone_data.h ../include/ban.h \
   ../include/utils.h ../include/comm.h ../include/handler.h \
-  ../include/db.h /usr/local/pgsql/include/libpq-fe.h \
-  /usr/local/pgsql/include/postgres_ext.h ../include/quest.h
+  ../include/db.h ../include/quest.h
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 OBJFILES= $(OBJ)/weather.o
